syntax = "proto3";
package dto;
option go_package = "./dto";
message Url {
    string compaign = 1;
    string urlId = 2;
    string destUrl = 3;
    string profileId = 4;
}